--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:oracle:thin:@//ns3038689.ip-51-255-85.eu:1521/ORCLCDB
+spring.datasource.username=SCORING
+spring.datasource.password=UuQ6973vw8dk4d
